# vietnam-lottery-xsmb-analysis

./: .env.example  .gitignore  HUONG_DAN_SU_DUNG.md  R2_DATA_LAKE_ENHANCEMENT.md  README.md  pyproject.toml
.github/workflows/: backup-and-restore-drill.yml  ci.yml  daily-etl.yml  dashboard-publish.yml  weekly-csv-export.yml  xsmb-gap-repair.yml  xsmn-backfill.yml  xsmt-backfill.yml
docs/: data-dictionary.md  operations.md  power-bi.md  r2-setup.md  tableau.md
examples/: read_gold.py
frontend/: README.md  analytics.ts  benchmark-report.ts  dashboard-data.ts  explorer-state.ts  lottery-contract.ts  ops-data.ts  package-lock.json  package.json  sites-vite-plugin.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  worker-env.d.ts
frontend/app/: layout.tsx  (+2 more)
scripts/: __init__.py  export_frontend_demo.py  export_serving_data.py
sql/: analysis-examples.sql  data-quality-checks.sql  xsmn-data-quality-checks.sql  xsmt-data-quality-checks.sql
src/: analyze.py  dtos.py  lottery.py
tests/: conftest.py  test_backfill_window.py  test_cli.py  test_compact_control_state.py  test_config.py  test_control.py  test_csv_export.py  test_disaster_recovery.py  test_export_serving_data.py  test_extract.py  test_gold_keys.py  test_history_audit.py  test_legacy_output.py  test_marts.py  test_migration.py  test_models.py  test_pipeline.py  test_quality.py  test_r2.py  test_repository.py  test_station_calendar.py  test_storage.py  test_transform.py  test_xsmn_extract.py  test_xsmn_models.py  test_xsmn_pipeline.py  test_xsmn_repository.py  test_xsmn_transform.py  test_xsmt.py
(+59 files in other folders)
